# langchain-chatbot-api

./: .gitignore  pyproject.toml
chat/: consumers.py  prompts.py  routing.py
chat/conversations/: serializers.py  views.py
config/: asgi.py  authentication.py  settings.py
users/: serializers.py  urls.py  views.py
utils/chatbot/embedding/: pdf_embedding.py
utils/chatbot/prompt/: dummy_chat.py  pdf_chat.py
